--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,8 @@ analytics:
 author:
   name             : "Shenglong Zhou"
   avatar           : "slzhou.jpg"
-  bio              : "Research Fellow at the University of Southampton"
+  bio              : "Research Fellow at the <a style='color: blue; ' href='https://www.southampton.ac.uk/maths/research/groups/operational_research.page'>Operational Research</a><br /><br /> <a style='color: blue;
+                     ' href='http://www.southampton.ac.uk'>University of Southampton</a><br /><br />"
   location         : "Southampton, United Kingdom"
   employer         :
   pubmed           :  
