--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Dr Shenglong Zhou"
+title                    : "Shenglong Zhou"
 title_separator          : "-"
 name                     : &name "Shenglong Zhou"
 description              : &description "Reseach Fellow at the University of Southampton"
