--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   github           : "ShenglongZhou"
   google_plus      :
   keybase          :
-  instagram        : "longnanzhou/"
+  instagram        : #"longnanzhou/"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
