--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Shenglong Zhou"
 title_separator          : "-"
 name                     : &name "Shenglong Zhou"
-description              : &description "Reseach Fellow at the University of Southampton"
+description              : &description "Teaching Fellow at the University of Southampton"
 url                      : https://shenglongzhou.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/shenglongzhou.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shenglong Zhou"
   avatar           : "zsl.jpg"
-  bio              : "Research Fellow at the <a style='color: blue;' href='https://www.southampton.ac.uk/maths/research/groups/operational_research.page'>Operational Research</a><br />
+  bio              : "Teaching Fellow at the <a style='color: blue;' href='https://www.southampton.ac.uk/maths/research/groups/operational_research.page'>Operational Research</a><br />
                       <a style='color: blue;' href='http://www.southampton.ac.uk'>University of Southampton</a><br />"
   location         : "Southampton, United Kingdom"
   employer         :
