--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
-  - title: "**Home**"
+  - title: "<a style='color: grey;'>**Home**</a>"
     url: /about/
     
   - title: "**Publications**"
