--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,17 @@
 # main links links
 main:
-  - title: "<a style='color: grey;'>**Home**</a>"
+  - title: "Home"
     url: /about/
     
-  - title: "**Publications**"
+  - title: "Publications"
     url: /publications/
     
-  - title: "**Software**"
+  - title: "Software"
     url: /software/
     
-  - title: "**Talks**"
+  - title: "Talks"
     url: /talks/    
 
-  - title: "**Teaching**"
+  - title: "Teaching"
     url: /teaching/    
     
