--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shenglong Zhou"
   avatar           : "zsl-new.jpg"
-  bio              : "Teaching Fellow at the <a style='color: blue;' href='https://www.southampton.ac.uk/maths/research/groups/operational_research.page'>Operational Research</a><br />
+  bio              : "Teaching Fellow at the <a style='color:#3AAFA9' href='https://www.southampton.ac.uk/maths/research/groups/operational_research.page'>Operational Research</a><br />
                       <a style='color: blue;' href='http://www.southampton.ac.uk'>University of Southampton</a><br />"
   location         : "Southampton, United Kingdom"
   employer         :
