--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,7 @@ analytics:
 author:
   name             : "Shenglong Zhou"
   avatar           : "zsl-new.jpg"
-  bio              : "Teaching Fellow at the <a style='color:#359597' href='https://www.southampton.ac.uk/maths/research/groups/operational_research.page'>Operational Research</a><br />
-                      <a style='color:#359597' href='http://www.southampton.ac.uk'>University of Southampton</a><br />"
+  bio              : "Teaching Fellow at the <a style='color:#359597' href='http://www.southampton.ac.uk'>University of Southampton</a><br />"
   location         : "Southampton, United Kingdom"
   employer         :
   pubmed           :  
