--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shenglong Zhou"
   avatar           : "zsl-new.jpg"
-  bio              : "Teaching Fellow at the <a style='color:#358597' href='http://www.southampton.ac.uk'>University of Southampton</a><br />"
+  bio              : "Research Fellow at the <a style='color:#358597' href='http://www.southampton.ac.uk'>University of Southampton</a><br />"
   location         : "Southampton, United Kingdom"
   employer         :
   pubmed           :  
