--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shenglong Zhou"
   avatar           : "zsl-new.jpg"
-  bio              : "Research Fellow at the <a style='text-decoration:none; color:#3AAFA9' href='http://www.southampton.ac.uk'>University of Southampton</a><br />"
+  bio              : "Research Fellow at the <a style='text-decoration:none; color:#0070C0' href='http://www.southampton.ac.uk'>University of Southampton</a><br />"
   location         : "Southampton, UK"
   employer         :
   pubmed           :  
