--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: "Home"
+  - title: "<span style="color:grey"><b>Home</b></span>"
     url: /about/
     
-  - title: "Publications"
+  - title: "<span style="color:grey"><b>Publications</b></span>"
     url: /publications/
     
-  - title: "Software"
+  - title: "<span style="color:grey"><b>Software</b></span>"
     url: /software/
     
-  - title: "Talks"
+  - title: "<span style="color:grey"><b>Talks</b></span>"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "<span style="color:grey"><b>Teaching</b></span>"
     url: /teaching/    
     
-  - title: "BiOpt Toolbox"
+  - title: "<span style="color:grey"><b>BiOpt Toolbox</b></span>"
     url: /BiOptToolbox/    
