--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: <span style="color:grey"><b>Home</b></span>
+  - title: <span style="color:#009999"><b>Home</b></span>
     url: /about/
     
-  - title: <span style="color:grey"><b>Publications</b></span>
+  - title: <span style="color:#009999"><b>Publications</b></span>
     url: /publications/
     
-  - title: <span style="color:grey"><b>Software</b></span>
+  - title: <span style="background-color:grey"><b>Software</b></span>
     url: /software/
     
-  - title: <span style="color:grey"><b>Talks</b></span>
+  - title: <span style="background-color:grey"><b>Talks</b></span>
     url: /talks/    
 
-  - title: <span style="color:grey"><b>Teaching</b></span>
+  - title: <span style="background-color:grey"><b>Teaching</b></span>
     url: /teaching/    
     
-  - title: <span style="color:grey"><b>BiOpt Toolbox</b></span>
+  - title: <span style="background-color:grey"><b>BiOpt Toolbox</b></span>
     url: /BiOptToolbox/    
