--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
-  - title: <span style="color:#009999"><b>Home</b></span>
+  - title: <span style="color:#4a4e4d"><b>Home</b></span>
     url: /about/
     
   - title: <span style="color:#0070C0"><b>Publications</b></span>
