--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: <span style="color:#0070C0"><b>Publications</b></span>
     url: /publications/
     
-  - title: <span style="color:#009999"><b>Software</b></span>
+  - title: <span style="color:#3D8C95"><b>Software</b></span>
     url: /software/
     
   - title: <span style="color:#009999"><b>Talks</b></span>
