--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: <span style="color:#E6873C"><b>Home</b></span>
     url: /about/
     
-  - title: <span style="color:#0070C0"><b>Publications</b></span>
+  - title: <span style="color:#225675"><b>Publications</b></span>
     url: /publications/
     
   - title: <span style="color:#3D8C95"><b>Software</b></span>
@@ -12,7 +12,7 @@ main:
   - title: <span style="color:#E6873C"><b>Talks</b></span>
     url: /talks/    
 
-  - title: <span style="color:#0070C0"><b>Teaching</b></span>
+  - title: <span style="color:#225675"><b>Teaching</b></span>
     url: /teaching/    
     
   - title: <span style="color:#3D8C95"><b>BiOpt Toolbox</b></span>
