--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: <font style="font-weight: bold; text-decoration:none; color:#225675">Home</font>
+  - title: <span style="font-weight: bold; color:#225675">Home</span>
     url: /about/
     
-  - title: <font style="font-weight: bold; text-decoration:none; color:#225675">Publications</font>
+  - title: <span style="font-weight: bold; color:#225675">Publications</span>
     url: /publications/
     
-  - title: <font style="font-weight: bold; text-decoration:none; color:#225675">Software</font>
+  - title: <span style="font-weight: bold; color:#225675">Software</span>
     url: /software/
     
-  - title: <font style="font-weight: bold; text-decoration:none; color:#225675">Talks</font>
+  - title: <span style="font-weight: bold; color:#225675">Talks</span>
     url: /talks/    
 
-  - title: <font style="font-weight: bold; text-decoration:none; color:#225675">Teaching</font>
+  - title: <span style="font-weight: bold; color:#225675">Teaching</span>
     url: /teaching/    
     
-  - title: <font style="font-weight: bold; text-decoration:none; color:#225675">BiOpt Toolbox</font>
+  - title: <span style="font-weight: bold; color:#225675">BiOpt Toolbox</span>
     url: /BiOptToolbox/    
