--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: <span style="font-weight: bold;  color:#225675">Home</span>
+  - title: <span style="color:#225675"><b>Home</b></span>
     url: /about/
     
-  - title: <span style="font-weight: bold; color:#225675">Publications</span>
+  - title: <span style="color:#225675">Publications</b></span>
     url: /publications/
     
-  - title: <span style="font-weight: bold; color:#225675">Software</span>
+  - title: <span style="color:#225675">Software</b></span>
     url: /software/
     
-  - title: <span style="font-weight: bold; color:#225675">Talks</span>
+  - title: <span style="color:#225675">Talks</b></span>
     url: /talks/    
 
-  - title: <span style="font-weight: bold; color:#225675">Teaching</span>
+  - title: <span style="color:#225675">Teaching</b></span>
     url: /teaching/    
     
-  - title: <span style="font-weight: bold; color:#225675">BiOpt Toolbox</span>
+  - title: <span style="color:#225675">BiOpt Toolbox</b></span>
     url: /BiOptToolbox/    
