--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/shenglongzhou88"
+  facebook         : "shenglongzhou88"
   foursquare       :
   github           : "ShenglongZhou"
   google_plus      :
