--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : #"Southampton, UK"
   employer         :
   pubmed           :  
-  email            : "shenglong.zhou@soton.ac.uk"
+  email            : "slzhou2021@163.com"
   orcid            : "https://orcid.org/0000-0003-2843-1614"
   github           : "ShenglongZhou"
   facebook         : "shenglongzhou88"
