--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,4 +16,4 @@ main:
     url: /teaching/    
     
   - title: <span style="color:#225675"><b>Toolbox</b></span>
-    url: /BiOptToolbox/    
+    url: /Toolbox/    
