--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,5 +15,5 @@ main:
   - title: <span style="color:#225675"><b>Teaching</b></span>
     url: /teaching/    
     
-  - title: <span style="color:#225675"><b>Toolbox</b></span>
+  - title: <span style="color:#225675"><b>Toolboxes</b></span>
     url: /Toolbox/    
