--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: <span style="color:#225675"><b>Home</b></span>
+  - title: <span style="color:#8cd2d5"><b>Home</b></span>
     url: /about/
     
-  - title: <span style="color:#225675"><b>Publications</b></span>
+  - title: <span style="color:#8cd2d5"><b>Publications</b></span>
     url: /publications/
     
-  - title: <span style="color:#225675"><b>Software</b></span>
+  - title: <span style="color:#8cd2d5"><b>Software</b></span>
     url: /software/
     
-  - title: <span style="color:#225675"><b>Talks</b></span>
+  - title: <span style="color:#8cd2d5"><b>Talks</b></span>
     url: /talks/    
 
-  - title: <span style="color:#225675"><b>Teaching</b></span>
+  - title: <span style="color:#8cd2d5"><b>Teaching</b></span>
     url: /teaching/    
     
-  - title: <span style="color:#225675"><b>Toolboxes</b></span>
+  - title: <span style="color:#8cd2d5"><b>Toolboxes</b></span>
     url: /Toolbox/    
