--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,11 +9,14 @@ main:
   - title: <span style="color:#8cd2d5"><b>Software</b></span>
     url: /software/
     
-  - title: <span style="color:#8cd2d5"><b>Talks</b></span>
-    url: /talks/    
+  - title: <span style="color:#8cd2d5"><b>Presentations</b></span>
+    url: /presentations/  
 
-  - title: <span style="color:#8cd2d5"><b>Teaching</b></span>
-    url: /teaching/    
-    
+ # - title: <span style="color:#8cd2d5"><b>Talks</b></span>
+ #   url: /talks/    
+
+ # - title: <span style="color:#8cd2d5"><b>Teaching</b></span>
+ #   url: /teaching/    
+   
   - title: <span style="color:#8cd2d5"><b>Toolboxes</b></span>
     url: /Toolbox/    
