--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,24 @@
 # main links links
+
+<style>
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
+</style>
+
+
 main:
   - title: <span style="color:#8cd2d5"><b>Home</b></span>
     url: /about/
