--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@ main:
   - title: <a style="font-weight: bold; color:#8cd2d5"  target="_blank">Home</a>
     url: /about/
     
-  - title: <span style="color:#8cd2d5" target="_blank"><b>Publications</b></span>
+  - title: <a style="font-weight: bold; color:#8cd2d5"  target="_blank">Publications</a>
     url: /publications/
     
   - title: <span style="color:#8cd2d5" target="_blank"><b>Software</b></span>
