--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,11 +10,11 @@ a:visited {
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a:active {
-  text-decoration: underline;
+  text-decoration: none;
 }
 </style>
 
