--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,10 +27,10 @@ main:
   - title: <a style="font-weight: bold; color:#8cd2d5">Publications</a>
     url: /publications/
     
-  - title: <span style="color:#8cd2d5" target="_blank"><b>Software</b></span>
+  - title: <span style="color:#8cd2d5"><b>Software</b></span>
     url: /software/
     
-  - title: <span style="color:#8cd2d5" target="_blank"><b>Presentations</b></span>
+  - title: <span style="color:#8cd2d5"><b>Presentations</b></span>
     url: /presentations/  
 
  # - title: <span style="color:#8cd2d5"><b>Talks</b></span>
@@ -39,5 +39,5 @@ main:
  # - title: <span style="color:#8cd2d5"><b>Teaching</b></span>
  #   url: /teaching/    
    
-  - title: <span style="color:#8cd2d5" target="_blank"><b>Toolboxes</b></span>
+  - title: <span style="color:#8cd2d5"><b>Toolboxes</b></span>
     url: /Toolbox/    
