--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   email            : "slzhou2021@163.com"
   orcid            : "https://orcid.org/0000-0003-2843-1614"
   github           : "ShenglongZhou"
-  facebook         : "shenglongzhou88"
+  facebook         : # "shenglongzhou88"
   researchgate     : "https://www.researchgate.net/profile/Shenglong_Zhou"
   googlescholar    : "https://scholar.google.com/citations?user=ecRgB8YAAAAJ&hl=en"
   uri              :
