--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Shenglong Zhou (周声龙)"
+  name             : "Shenglong Zhou"
   avatar           : "zsl-new.jpg"
   bio              : " <br />"
   location         : #"Southampton, UK"
