--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Shenglong Zhou"
+title                    : "SparseOpt Toolbox"
 title_separator          : "-"
-name                     : &name "Shenglong Zhou (周声龙)"
+name                     : &name "SparseOpt Toolbox"
 description              : #&description "Research Fellow at the University of Southampton"
-url                      : https://shenglongzhou.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://sparseopt.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/shenglongzhou.github.io"
+repository               : "sparseopt.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,18 +80,18 @@ analytics:
 
 # Site Author
 author:
-  name             : "Shenglong Zhou"
+  name             : "SparseOpt Toolbox"
   avatar           : "zsl-new.jpg"
   bio              : " <br />"
   location         : #"Southampton, UK"
   employer         :
   pubmed           :  
-  email            : "slzhou2021@163.com"
-  orcid            : "https://orcid.org/0000-0003-2843-1614"
-  github           : "ShenglongZhou"
+  email            : "longnanzsl@163.com"
+  orcid            : #"https://orcid.org/0000-0003-2843-1614"
+  github           : #"ShenglongZhou"
   facebook         : # "shenglongzhou88"
-  researchgate     : "https://www.researchgate.net/profile/Shenglong_Zhou"
-  googlescholar    : "https://scholar.google.com/citations?user=ecRgB8YAAAAJ&hl=en"
+  researchgate     : #"https://www.researchgate.net/profile/Shenglong_Zhou"
+  googlescholar    : #"https://scholar.google.com/citations?user=ecRgB8YAAAAJ&hl=en"
   uri              :
   bitbucket        :
   codepen          :
