--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "SparseOpt Toolbox"
-  avatar           : "zsl-new.jpg"
+  avatar           : "spopt.png"
   bio              :  "<a style='color:#007D98' href='https://shenglongzhou.github.io/'><b>Shenglong Zhou</b></a><br /> 
                       Professor at <br /> Beijing Jiaotong University <br /><br /> 
                       <a style='color:#007D98' href='https://faculty.bjtu.edu.cn/6336/'><b>Naihua Xiu</b></a><br /> 
