--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
  # - title: <span style="color:#015697"><b>Talks</b></span>
  #   url: /talks/    
 
- # - title: <span style="color:#015697"><b>Teaching</b></span>
- #   url: /teaching/    
+ - title: <span style="color:#015697"><b>Contact Us</b></span>
+    url: /teaching/    
    
   
