--- a/_config.yml
+++ b/_config.yml
@@ -85,10 +85,9 @@ author:
   bio              :  "<a style='color:#015697' href='https://shenglongzhou.github.io/'><b>Shenglong Zhou</b></a><br />
                        Beijing Jiaotong University <br /><br />
                       <a style='color:#015697' href='https://faculty.bjtu.edu.cn/6336/'><b>Naihua Xiu</b></a><br /> 
-                      Beijing Jiaotong University <br /><br />
-                      <a style='color:#015697' href='https://www.polyu.edu.hk/ama/profile/hdqi/hdqi.html/'><b>Hou-Duo Qi</b></a><br /> 
-                      The Hong Kong Polytechnic University 
-                      "
+                      Beijing Jiaotong University"
+                      # <a style='color:#015697' href='https://www.polyu.edu.hk/ama/profile/hdqi/hdqi.html/'><b>Hou-Duo Qi</b></a><br /> 
+                      # The Hong Kong Polytechnic University"
   location         : #"Southampton, UK"
   employer         :
   pubmed           :  
