--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,9 @@ main:
   - title: <span style="color:#015697"><b>Home</b></span>
     url: /about/
     
+  - title: <span style="color:#015697"><b>SCO</b></span>
+    url: /SCO/
+    
   - title: <span style="color:#015697"><b>Solvers</b></span>
     url: /publications/
     
