--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,9 @@ main:
   - title: <span style="color:#015697"><b>SCO</b></span>
     url: /SCO/
     
+  - title: <span style="color:#015697"><b>SRO</b></span>
+    url: /SRO/
+    
   - title: <span style="color:#015697"><b>Solvers</b></span>
     url: /publications/
     
