--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,9 @@ main:
   - title: <span style="color:#015697"><b>SRO</b></span>
     url: /SRO/
     
+  - title: <span style="color:#015697"><b>SQCQP</b></span>
+    url: /SQCQP/  
+    
   - title: <span style="color:#015697"><b>Solvers</b></span>
     url: /publications/
     
