--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,9 @@ main:
   - title: <span style="color:#015697"><b>SQCQP</b></span>
     url: /SQCQP/  
     
+  - title: <span style="color:#015697"><b>CS/b></span>
+    url: /CS/ 
+    
   - title: <span style="color:#015697"><b>Solvers</b></span>
     url: /publications/
     
