--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
   - title: <span style="color:#015697"><b>SQCQP</b></span>
     url: /SQCQP/  
     
-  - title: <span style="color:#015697"><b>CS/b></span>
+  - title: <span style="color:#015697"><b>CS</b></span>
     url: /CS/ 
     
   - title: <span style="color:#015697"><b>Solvers</b></span>
