--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,14 +10,23 @@ main:
   - title: <span style="color:#015697"><b>SRO</b></span>
     url: /SRO/
     
+  - title: <span style="color:#015697"><b>SFCO</b></span>
+    url: /SFCO/ 
+    
+  - title: <span style="color:#015697"><b>SFRO</b></span>
+    url: /SFRO/ 
+    
   - title: <span style="color:#015697"><b>SQCQP</b></span>
     url: /SQCQP/  
     
   - title: <span style="color:#015697"><b>CS</b></span>
     url: /CS/ 
     
-  - title: <span style="color:#015697"><b>SFCO</b></span>
-    url: /SFCO/ 
+   - title: <span style="color:#015697"><b>1BCS</b></span>
+    url: /1BCS/   
+    
+   - title: <span style="color:#015697"><b>SSVM</b></span>
+    url: /SSVM/   
     
   - title: <span style="color:#015697"><b>Contact Us</b></span>
     url: /teaching/   
