--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,7 +29,7 @@ main:
     url: /SSVM/   
     
   - title: <span style="color:#015697"><b>Contact Us</b></span>
-    url: /teaching/   
+    url: /contactus/   
     
 #  - title: <span style="color:#015697"><b>Solvers</b></span>
 #    url: /publications/
