--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "SparseOpt Toolbox"
+title                    : "SparseOpt Toolbox（中文版）"
 title_separator          : "-"
-name                     : &name "SparseOpt Toolbox"
+name                     : &name "SparseOpt Toolbox（中文版）"
 description              : #&description "Research Fellow at the University of Southampton"
-url                      : https://sparseopt.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://sparseopt-cn.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "sparseopt.github.io"
+repository               : "sparseopt-cn.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -79,9 +79,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "SparseOpt Toolbox"
+  name             : "SparseOpt Toolbox（中文版）"
   avatar           : "spopt4.png"
-  bio              : "<a style='color:#015697' href='https://shenglongzhou.github.io/'><b>周声龙</b></a> &nbsp &nbsp <a style='color:#015697' href='https://faculty.bjtu.edu.cn/6336/'><b>修乃华</b></a> &nbsp &nbsp <a style='color:#015697' href='https://www.polyu.edu.hk/ama/profile/hdqi/hdqi.html'><b>戚厚铎</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8525/'><b>罗自炎</b></a> &nbsp &nbsp <a style='color:#015697' href='https://sci.sdut.edu.cn/_t832/2018/1129/c5856a253869/page.htm'><b>潘丽丽</b></a> &nbsp &nbsp <a style='color:#015697' href='https://shuaili2025.github.io/'><b>李&nbsp &nbsp 帅</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8316/'><b>孔令臣</b></a> &nbsp &nbsp <a style='color:#015697' href='https://profiles.imperial.ac.uk/geoffrey.li/'><b>李&nbsp &nbsp 烨</b></a><br />"
+  bio              : "<a style='color:#015697' href='https://shenglongzhou.github.io/'><b>周声龙</b></a> &nbsp &nbsp <a style='color:#015697' href='https://faculty.bjtu.edu.cn/6336/'><b>修乃华</b></a> &nbsp &nbsp <a style='color:#015697' href='https://www.polyu.edu.hk/ama/profile/hdqi/hdqi.html'><b>戚厚铎</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8525/'><b>罗自炎</b></a> &nbsp &nbsp <a style='color:#015697' href='https://sci.sdut.edu.cn/_t832/2018/1129/c5856a253869/page.htm'><b>潘丽丽</b></a> &nbsp &nbsp <a style='color:#015697' href='https://shuaili2025.github.io/'><b>李&nbsp &nbsp帅</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8316/'><b>孔令臣</b></a> &nbsp &nbsp <a style='color:#015697' href='https://profiles.imperial.ac.uk/geoffrey.li/'><b>李&nbsp &nbsp烨</b></a><br />"
                      #"<a style='color:#015697' href='https://shenglongzhou.github.io/'><b>Shenglong Zhou</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/6336/'><b>Naihua Xiu</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8525/'><b>Ziyan Luo</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8316/'><b>Lingchen Kong</b></a><br /> Beijing Jiaotong University<br /><br /> <a style='color:#015697' href='https://sci.sdut.edu.cn/_t832/2018/1129/c5856a253869/page.htm'><b>Lili Pan</b></a><br /> Shandong University of Technology<br /><br /> <a style='color:#015697' href='https://www.polyu.edu.hk/ama/profile/hdqi/hdqi.html'><b>Hou-Duo Qi</b></a><br /> The Hong Kong Polytechnic University<br /><br /> <a style='color:#015697' href='https://profiles.imperial.ac.uk/geoffrey.li/'><b>Geoffrey Ye Li</b></a><br /> Imperial College London"
   location         : #"Southampton, UK"
   employer         :
