--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "SparseOpt Toolbox"
+title                    : "SparseOpt"
 title_separator          : "-"
-name                     : &name "SparseOpt Toolbox"
+name                     : &name "SparseOpt"
 description              : #&description "Research Fellow at the University of Southampton"
 url                      : https://sparseopt.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -79,7 +79,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "SparseOpt Toolbox"
+  name             : "SparseOpt"
   avatar           : "spopt4.png"
   bio              : "<a style='color:#015697' href='https://shenglongzhou.github.io/'><b>Shenglong Zhou</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/6336/'><b>Naihua Xiu</b></a><br /> <a style='color:#015697' href='https://www.polyu.edu.hk/ama/profile/hdqi/hdqi.html'><b>Hou-Duo Qi</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8525/'><b>Ziyan Luo</b></a><br /> <a style='color:#015697' href='https://sci.sdut.edu.cn/_t832/2018/1129/c5856a253869/page.htm'><b>Lili Pan</b></a><br /> <a style='color:#015697' href='https://shuaili2025.github.io/'><b>Shuai Li</b></a><br /> <a style='color:#015697' href='https://linh-opt.github.io/'><b>Hongjie Lin</b></a><br /> <a style='color:#015697' href='https://plantann.github.io/'><b>Junliang Wang</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8316/'><b>Lingchen Kong</b></a><br /> <a style='color:#015697' href='https://profiles.imperial.ac.uk/geoffrey.li/'><b>Geoffrey Ye Li</b></a><br />"
                      #"<a style='color:#015697' href='https://shenglongzhou.github.io/'><b>Shenglong Zhou</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/6336/'><b>Naihua Xiu</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8525/'><b>Ziyan Luo</b></a><br /> <a style='color:#015697' href='https://faculty.bjtu.edu.cn/8316/'><b>Lingchen Kong</b></a><br /> Beijing Jiaotong University<br /><br /> <a style='color:#015697' href='https://sci.sdut.edu.cn/_t832/2018/1129/c5856a253869/page.htm'><b>Lili Pan</b></a><br /> Shandong University of Technology<br /><br /> <a style='color:#015697' href='https://www.polyu.edu.hk/ama/profile/hdqi/hdqi.html'><b>Hou-Duo Qi</b></a><br /> The Hong Kong Polytechnic University<br /><br /> <a style='color:#015697' href='https://profiles.imperial.ac.uk/geoffrey.li/'><b>Geoffrey Ye Li</b></a><br /> Imperial College London"
